--- a/week4/login.html
+++ b/week4/login.html
@@ -1,102 +1,120 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Week4</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <style>
+      html,
+      body {
+        height: 100%;
+        text-align: center;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Week3</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <style>
-    html,
-    body {
-      height: 100%;
-      text-align: center;
-    }
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+      .form-signin {
+        width: 100%;
+        max-width: 330px;
+        padding: 15px;
+        margin: auto;
+      }
+    </style>
+  </head>
 
-    .form-signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
-  </style>
-</head>
-
-<body>
-  <div id="app">
-    <div class="container">
-      <div class="row justify-content-center">
-        <h1 class="h3 mb-3 font-weight-normal">
-          請先登入
-        </h1>
-        <div class="col-8">
-          <form class="form-signin" @submit.prevent="login">
-            <div class="form-floating mb-3">
-              <input type="email" v-model="user.username" class="form-control" id="username"
-                placeholder="name@example.com" required autofocus>
-              <label for="username">Email address</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="password" v-model="user.password" class="form-control" id="password" placeholder="Password"
-                required>
-              <label for="password">Password</label>
-            </div>
-            <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">
-              登入
-            </button>
-          </form>
+  <body>
+    <div id="app">
+      <div class="container">
+        <div class="row justify-content-center">
+          <h1 class="h3 mb-3 font-weight-normal">請先登入</h1>
+          <div class="col-8">
+            <form class="form-signin" @submit.prevent="login">
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  v-model="user.username"
+                  class="form-control"
+                  id="username"
+                  placeholder="name@example.com"
+                  required
+                  autofocus
+                />
+                <label for="username">Email address</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input
+                  type="password"
+                  v-model="user.password"
+                  class="form-control"
+                  id="password"
+                  placeholder="Password"
+                  required
+                />
+                <label for="password">Password</label>
+              </div>
+              <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">
+                登入
+              </button>
+            </form>
+          </div>
         </div>
+        <p class="mt-5 mb-3 text-muted">&copy; 2023~∞ - 六角學院</p>
       </div>
-      <p class="mt-5 mb-3 text-muted">
-        &copy; 2023~∞ - 六角學院
-      </p>
     </div>
-  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
-  <script type="module">
-    import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js';
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <script type="module">
+      import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
 
-createApp({
-  data() {
-    return {
-      apiUrl: 'https://vue3-course-api.hexschool.io/v2',
-      user: {
-        username: '',
-        password: '',
-      },
-    };
-  },
-  methods: {
-    login() {
-      const api = `${this.apiUrl}/admin/signin`;
+      createApp({
+        data() {
+          return {
+            apiUrl: "https://vue3-course-api.hexschool.io/v2",
+            user: {
+              username: "",
+              password: "",
+            },
+          };
+        },
+        methods: {
+          login() {
+            const api = `${this.apiUrl}/admin/signin`;
 
-      axios.post(api, this.user).then((response) => {
-        const { token, expired } = response.data;
-        // 寫入 cookie token
-        // expires 設置有效時間
-        document.cookie = `hexToken=${token};expires=${new Date(expired)}; path=/`;
-        window.location = 'products.html';
-      }).catch((err) => {
-        alert(err.response.data.message);
-      });
-    },
-  },
-}).mount('#app');
-  </script>
-</body>
-
+            axios
+              .post(api, this.user)
+              .then((response) => {
+                const { token, expired } = response.data;
+                // 寫入 cookie token
+                // expires 設置有效時間
+                document.cookie = `hexToken=${token};expires=${new Date(
+                  expired
+                )}; path=/`;
+                window.location = "products.html";
+              })
+              .catch((err) => {
+                alert(err.response.data.message);
+              });
+          },
+        },
+      }).mount("#app");
+    </script>
+  </body>
 </html>
