--- a/week4/products.html
+++ b/week4/products.html
@@ -149,7 +149,7 @@
               </h5>
               <button
                 type="button"
-                class="btn-close"
+                class="btn-close bg-light"
                 data-bs-dismiss="modal"
                 aria-label="Close"
               ></button>
@@ -216,7 +216,7 @@
                   <input
                     type="text"
                     class="form-control mt-4"
-                    placeholder="請輸入圖片連結"
+                    placeholder="請輸入圖片連結，輸入後才會出現新增的按鈕"
                     v-model="newImage"
                   />
                   <div>
@@ -224,6 +224,7 @@
                       class="btn btn-outline-primary btn-sm d-block w-100 mt-2"
                       type="button"
                       @click="createImage"
+                      v-if="newImage"
                     >
                       新增圖片
                     </button>
