week5 slightly modifed

--- a/week5/index.html
+++ b/week5/index.html
@@ -261,7 +261,7 @@
                 class="form-control"
                 cols="30"
                 rows="10"
-                model="form.message"
+                v-model="message"
               ></textarea>
             </div>
             <div class="text-end">
